<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_card_view_sq_cell_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_item_id" />

    <TextView
        android:id="@+id/tv_card_view_sq_cell_survey_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_survey_id" />

    <TextView
        android:id="@+id/tv_card_view_sq_cell_question_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_question_name" />

    <TextView
        android:id="@+id/tv_card_view_sq_cell_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_item_name" />
</LinearLayout>