<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_card_view_hrm_cell_person_uuid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_person_uuid" />

    <TextView
        android:id="@+id/tv_card_view_hrm_cell_person_document_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_person_document_id" />

    <TextView
        android:id="@+id/tv_card_view_hrm_cell_timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_date_time" />

    <TextView
        android:id="@+id/tv_card_view_hrm_cell_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_hr_measurement" />
</LinearLayout>