<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:padding="5dp"
        app:cardCornerRadius="1dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_card_view_sqcc_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_item_id" />

                <TextView
                    android:id="@+id/tv_card_view_sqcc_question_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_question_id" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_card_view_sqcc_survey_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_survey_id" />

                <TextView
                    android:id="@+id/tv_card_view_sqcc_question_concept_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_concept_id" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_card_view_sqcc_question_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_question_name" />

            <TextView
                android:id="@+id/tv_card_view_sqcc_choice_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_item_name" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>