<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="20dp"
    android:padding="5dp"
    app:cardCornerRadius="1dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_card_view_ps_person_uuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_person_uuid" />

        <TextView
            android:id="@+id/tv_card_view_ps_person_document_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_person_document_id" />

        <TextView
            android:id="@+id/tv_card_view_ps_survey_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_survey_id" />

    </LinearLayout>

</android.support.v7.widget.CardView>